[gd_scene load_steps=18 format=3 uid="uid://bhju5n4ymgoto"]

[ext_resource type="Script" uid="uid://bc5o26f6hk2yq" path="res://scenes/Main/Menu.gd" id="1_r3bay"]
[ext_resource type="AudioStream" uid="uid://bxr6qqqx2lq5d" path="res://res/audio/MainMenuTheme.ogg" id="3_aul47"]
[ext_resource type="PackedScene" uid="uid://inas5xn4h6tb" path="res://scenes/UI/LeaderBoard.tscn" id="3_mcylv"]
[ext_resource type="TileSet" uid="uid://83e6r7d4e13" path="res://scenes/Tiles/TileMap.tres" id="3_udspc"]
[ext_resource type="Texture2D" uid="uid://cnnm8mw1n4hvj" path="res://logo-full.svg" id="3_wnrrw"]
[ext_resource type="PackedScene" uid="uid://ck22cvxmk301" path="res://scenes/UI/Settings.tscn" id="4_mw6f4"]
[ext_resource type="PackedScene" uid="uid://dqfy5urq65gy0" path="res://editor/Main/EditorMain.tscn" id="5_a2ivn"]
[ext_resource type="PackedScene" uid="uid://b43w80klpbdo6" path="res://scenes/UI/Levels.tscn" id="6_c5yde"]
[ext_resource type="AudioStream" uid="uid://bwq6ovbkav027" path="res://res/audio/MapTheme.ogg" id="7_awp7m"]

[sub_resource type="SystemFont" id="SystemFont_p7tdo"]
font_names = PackedStringArray("Century Gothic")

[sub_resource type="SystemFont" id="SystemFont_8r0ef"]
font_names = PackedStringArray("Century Gothic")

[sub_resource type="Animation" id="Animation_fbmog"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_17eu4"]
resource_name = "camera"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 1050), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o04a8"]
_data = {
&"RESET": SubResource("Animation_fbmog"),
&"camera": SubResource("Animation_17eu4")
}

[sub_resource type="Animation" id="Animation_l72wp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MapTheme:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-10.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [5.0]
}

[sub_resource type="Animation" id="Animation_hgjb7"]
resource_name = "crossfade"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MapTheme:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-80.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [5.0, -80.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MapTheme:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f71vl"]
_data = {
&"RESET": SubResource("Animation_l72wp"),
&"crossfade": SubResource("Animation_hgjb7")
}

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r3bay")

[node name="Node2D" type="Node2D" parent="."]

[node name="TileMap" type="TileMap" parent="Node2D"]
tile_set = ExtResource("3_udspc")
format = 2
layer_0/tile_data = PackedInt32Array(327680, 1, 0, 327681, 1, 0, 393216, 1, 0, 393217, 1, 0, 458753, 1, 0, 458752, 1, 0, 524288, 1, 0, 458754, 1, 0, 458755, 1, 0, 524291, 1, 0, 524290, 1, 0, 589826, 1, 0, 589825, 1, 0, 524289, 1, 0, 589827, 1, 0, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 458762, 1, 0, 393226, 65537, 268435457, 393227, 1, 0, 393228, 1, 0, 393229, 1, 0, 393230, 1, 0, 458766, 1, 0, 524302, 1, 0, 524303, 1, 0, 524304, 1, 0, 524305, 1, 0, 589840, 1, 0, 589841, 1, 0, 589839, 1, 0, 589838, 1, 0, 589837, 1, 0, 589836, 1, 0, 589835, 1, 0, 589834, 1, 0, 589833, 1, 0, 589832, 1, 0, 589831, 1, 0, 589830, 1, 0, 589829, 1, 0, 589828, 1, 0, 524299, 1, 0, 524300, 1, 0, 524301, 1, 0, 458765, 1, 0, 458764, 1, 0, 458763, 1, 0, 458767, 1, 0, 458756, 65537, 1, 393218, 1, 0, 262144, 65537, 1, 327682, 65537, 1, 458768, 1, 0, 393231, 65537, 1, 458769, 65537, 1, 589824, 1, 0, 327679, 1, 0, 393215, 1, 0, 458751, 1, 0, 524287, 1, 0, 589823, 1, 0, 655359, 1, 0, 720895, 1, 0, 655360, 1, 0, 655361, 1, 0, 655362, 1, 0, 655363, 1, 0, 655364, 1, 0, 655365, 1, 0, 655366, 1, 0, 655367, 1, 0, 655368, 1, 0, 655369, 1, 0, 655370, 1, 0, 655371, 1, 0, 655372, 1, 0, 655373, 1, 0, 655374, 1, 0, 655375, 1, 0, 655376, 1, 0, 655377, 1, 0, 655378, 1, 0, 589842, 1, 0, 524306, 1, 0, 786431, 1, 0, 720896, 1, 0, 720897, 1, 0, 720898, 1, 0, 720899, 1, 0, 720900, 1, 0, 720901, 1, 0, 720902, 1, 0, 720903, 1, 0, 720904, 1, 0, 720905, 1, 0, 720906, 1, 0, 720907, 1, 0, 720908, 1, 0, 720909, 1, 0, 720910, 1, 0, 720911, 1, 0, 720912, 1, 0, 720913, 1, 0, 720914, 1, 0, 786450, 1, 0, 786449, 1, 0, 786448, 1, 0, 786447, 1, 0, 786446, 1, 0, 786445, 1, 0, 786437, 1, 0, 786436, 1, 0, 786435, 1, 0, 786434, 1, 0, 786433, 1, 0, 786432, 1, 0, 851967, 1, 0, 917503, 1, 0, 851968, 1, 0, 851969, 1, 0, 851970, 1, 0, 851971, 1, 0, 851972, 1, 0, 851973, 1, 0, 851981, 1, 0, 851982, 1, 0, 851983, 1, 0, 851984, 1, 0, 851985, 1, 0, 851986, 1, 0, 917522, 1, 0, 917521, 1, 0, 917520, 1, 0, 917512, 1, 0, 917511, 1, 0, 917510, 1, 0, 917509, 1, 0, 917508, 1, 0, 917507, 1, 0, 917506, 1, 0, 917505, 1, 0, 917504, 1, 0, 983039, 1, 0, 1048575, 1, 0, 983040, 1, 0, 983041, 1, 0, 983042, 1, 0, 983043, 1, 0, 983044, 1, 0, 983045, 1, 0, 983046, 1, 0, 983047, 1, 0, 983048, 1, 0, 983049, 1, 0, 983050, 1, 0, 983051, 1, 0, 983052, 1, 0, 983053, 1, 0, 983055, 1, 0, 983056, 1, 0, 983057, 1, 0, 983058, 1, 0, 851974, 131073, 0, 917513, 65537, 0, 917514, 65537, 0, 917515, 65537, 0, 917519, 1, 0, 1048589, 1, 0, 1048588, 1, 0, 1048587, 1, 0, 1048586, 1, 0, 1048585, 1, 0, 1048584, 1, 0, 1114124, 1, 0, 1114123, 1, 0, 1114122, 1, 0, 1114121, 1, 0, 1114120, 1, 0, 1114119, 1, 0, 1048591, 1, 0, 1114127, 1, 0, 1114128, 1, 0, 1114129, 1, 0, 1048593, 1, 0, 1048592, 1, 0, 1048594, 1, 0, 1114130, 1, 0, 1179666, 1, 0, 1179665, 1, 0, 1179664, 1, 0, 1245200, 1, 0, 1245201, 1, 0, 1245202, 1, 0, 1310737, 1, 0, 1310736, 1, 0, 1310735, 1, 0, 1245199, 1, 0, 1376271, 1, 0, 1376270, 1, 0, 1376269, 1, 0, 1376268, 1, 0, 1376267, 1, 0, 1376266, 1, 0, 1376265, 1, 0, 1376264, 1, 0, 1310734, 1, 1, 1310732, 65537, 1, 1310731, 1, 0, 1310730, 1, 0, 1310729, 1, 0, 1114125, 65537, 536870913, 1179663, 65537, 805306369, 786444, 65537, 805306369, 786438, 65537, 536870913, 1310728, 65537, 268435457, 1048578, 1, 0, 1048577, 1, 0, 1114118, 65537, 268435457, 1048583, 65537, 805306369, 1048579, 65537, 536870913, 1048576, 65537, 805306369, 1376263, 65537, 0, 1376262, 65537, 0, 1376261, 65537, 0, 1310738, 1, 0, 1376274, 1, 0, 1376273, 1, 0, 1376272, 1, 0, 1441809, 1, 0, 1441808, 1, 0, 1441807, 1, 0, 1441806, 1, 0, 1441802, 1, 0, 1441801, 1, 0, 1441800, 1, 0, 1441799, 1, 0, 1441798, 1, 0, 1441810, 1, 0, 1441794, 1, 0, 1441793, 1, 0, 1441792, 1, 0, 1507327, 1, 0, 1441791, 1, 0, 1376255, 1, 0, 1310719, 1, 0, 1245183, 1, 0, 1179647, 1, 0, 1114111, 1, 0, 1638404, 1, 1, 1507330, 1, 0, 1572866, 1, 0, 1638402, 1, 0, 1638401, 1, 0, 1638400, 1, 0, 1572864, 1, 0, 1507328, 1, 0, 1507329, 1, 0, 1572863, 1, 0, 1638399, 1, 0, 1703935, 1, 0, 1572865, 1, 0, 1769471, 1, 0, 1703936, 1, 0, 1703937, 1, 0, 1703938, 1, 0, 1703939, 1, 0, 1703940, 1, 0, 1703941, 1, 0, 1703942, 1, 0, 1703943, 1, 0, 1703944, 1, 0, 1703945, 1, 0, 1703946, 1, 0, 1703947, 1, 0, 1703948, 1, 0, 1703949, 1, 0, 1703950, 1, 0, 1703951, 1, 0, 1703952, 1, 0, 1703953, 1, 0, 1703954, 1, 0, 1507344, 1, 0, 1507345, 1, 0, 1507346, 1, 0, 1441803, 65537, 536870913, 1441805, 65537, 805306369, 1507343, 65537, 805306369, 1441797, 65537, 805306369, 1572882, 1, 0, 1638418, 1, 0)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -144.0
offset_top = 100.0
offset_right = 144.0
offset_bottom = 365.0
grow_horizontal = 2
theme_override_constants/separation = 32

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_wnrrw")

[node name="Play" type="Button" parent="CanvasLayer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 32)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = SubResource("SystemFont_p7tdo")
theme_override_font_sizes/font_size = 24
text = "Play
"

[node name="Leaderboard" type="Button" parent="CanvasLayer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = SubResource("SystemFont_8r0ef")
theme_override_font_sizes/font_size = 24
text = "Leaderboard
"

[node name="SettingsButton" type="Button" parent="CanvasLayer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = SubResource("SystemFont_8r0ef")
theme_override_font_sizes/font_size = 24
text = "Settings"

[node name="MapEditor" type="Button" parent="CanvasLayer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = SubResource("SystemFont_8r0ef")
theme_override_font_sizes/font_size = 24
text = "Map Editor"

[node name="Quit" type="Button" parent="CanvasLayer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = SubResource("SystemFont_8r0ef")
theme_override_font_sizes/font_size = 24
text = "Quit"

[node name="LeaderBoard" parent="CanvasLayer" instance=ExtResource("3_mcylv")]
unique_name_in_owner = true
visible = false
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Settings" parent="CanvasLayer" instance=ExtResource("4_mw6f4")]
unique_name_in_owner = true
visible = false

[node name="Editor" parent="CanvasLayer" instance=ExtResource("5_a2ivn")]
unique_name_in_owner = true
visible = false

[node name="Levels" parent="CanvasLayer" instance=ExtResource("6_c5yde")]
unique_name_in_owner = true
visible = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_aul47")
volume_db = 5.0
autoplay = true
bus = &"SoundTrack"

[node name="MapTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_awp7m")
volume_db = -10.0
bus = &"SoundTrack"

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
limit_smoothed = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_o04a8")
}
autoplay = "camera"
speed_scale = 0.05

[node name="SoundAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_f71vl")
}

[connection signal="pressed" from="CanvasLayer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Leaderboard" to="." method="_on_leaderboard_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/SettingsButton" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/MapEditor" to="." method="_on_map_editor_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="visibility_changed" from="CanvasLayer/Editor" to="." method="_on_editor_visibility_changed"]
